--- a/views/BooksInformation.ejs
+++ b/views/BooksInformation.ejs
@@ -46,22 +46,23 @@
                     >Favorites</a
                   >
                 </li>
-                <!-- <li class="nav-item m-2">
-                  <a class="nav-link active text-white" href="/Cesta"
-                    >Cesta</a
-                  >
-                </li> -->
+                <li class="nav-item m-2">
+                  <a class="nav-link active text-white" href="/UserSells">Mis compras</a>
+                  </li>
                 <% if( session.Role === "Admin") { %>
-                <li class="nav-item m-2">
-                  <a class="nav-link active text-white" href="/"
-                    >admin. users</a
-                  >
-                </li>
-                <li class="nav-item m-2">
-                  <a class="nav-link active text-white" href="/BooksRegistration"
-                    >Regis. Book</a
-                  >
-                </li>
+                  <li class="nav-item m-2">
+                    <a class="nav-link active text-white" href="/AdminSells">Ventas</a>
+                  </li>
+                  <li class="nav-item m-2">
+                    <a class="nav-link active text-white" href="/"
+                      >admin. users</a
+                    >
+                  </li>
+                  <li class="nav-item m-2">
+                    <a class="nav-link active text-white" href="/BooksRegistration"
+                      >Regis. Book</a
+                    >
+                  </li>
                 <% } %>
               </ul>
             </div>
@@ -168,7 +169,7 @@
               <% if ( book.Stock <= 5 && book.Stock >= 1 ) { %>
                 <div class="d-flex flex-row">
                   <p class="fs-5 me-4 text-decoration-line-through text-danger">$<%= book.Price %></p>
-                  <span style="font-size: 100%; height: 15%;" class="bg-danger p-1 text-white w-100">-14% de dto. excusivo</span>
+                  <span style="font-size: 100%; height: 15%;" class="bg-danger p-1 text-white w-100">-15% de dto. excusivo</span>
                 </div>
                 <p class="h2 me-4">$<%= book.Discount %></p>
               <% } else { %>
@@ -197,7 +198,7 @@
                   </button>
                 <% } else {%>
                 <button
-                  class="mx-auto border-0 text-white rounded p-2 mt-2 h5"
+                  class="mx-auto border-0 text-white rounded p-2 mt-2 h5 w-100"
                   style="width: 200px"
                   id="btnComprarDisabled"
                   onclick="document.getElementById('myModal').style.display='block'"
@@ -216,11 +217,11 @@
               <input type="text" hidden value="<%= book.Price %>" name="bookPriceCar">
               <!-- informaciones necesarias para el carrito -->
               <% if ( book.Stock !== 0 ) { %>
-                <div class="mt-2 mb-2 d-flex flex-row justify-content-center align-items-center">
+                <div class="mt-2 mb-3 d-flex flex-row justify-content-center align-items-center">
                   <button type="submit" class="btn btn-outline-success" data-mdb-ripple-color="dark">Añadir a la cesta</button>
                 </div>
               <% } else { %>
-                <div class="mt-2 mb-2 d-flex flex-row justify-content-center align-items-center">
+                <div class="mt-2 mb-3 d-flex flex-row justify-content-center align-items-center">
                   <a href="#" class="btn btn-outline-success text-decoration-line-through" data-mdb-ripple-color="dark">Añadir a la cesta</a>
                 </div>
               <% } %>   
