--- a/views/Cesta.ejs
+++ b/views/Cesta.ejs
@@ -16,6 +16,8 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="/css/Cesta.css" />
+    <link rel="stylesheet" href="css/btnModelStyle.css" />
+    <link rel="stylesheet" href="css/successModal.css" />
   </head>
   <body style="background-color: #eaeded">
     <!-- NAVBAR -->
@@ -42,9 +44,9 @@
                 >Favorites</a
               >
             </li>
-            <!-- <li class="nav-item m-2">
-              <a class="nav-link active text-white" href="/Favorites">Cesta</a>
-            </li> -->
+            <li class="nav-item m-2">
+              <a class="nav-link active text-white" href="/UserSells">Mis compras</a>
+              </li>
             <% if( session.Role === "Admin") { %>
             <li class="nav-item m-2">
               <a class="nav-link active text-white" href="/">admin. users</a>
@@ -143,11 +145,14 @@
                 <div
                   class="d-flex flex-row justify-content-start align-items-center mt-2"
                 >
-                  <p id="bookAmountQuantity" class="me-2 shadow">
-                    Cant.: <%= item.bookAmount %>
-                  </p>
+                  <select id="bookAmountQuantity" type="select" class="me-2 shadow">
+                    <option value="<%= item.bookAmount %>">Cant.: <%= item.bookAmount %></option>
+                    <% for ( let x = 0; x <= item.Stock; x++) { %>
+                      <option value="<%= x %>">Cant.: <%= x %></option>
+                    <% } %>  
+                  </select>
                   <p>|</p>
-                  <form action="/RemoveFromCar" method="post">
+                  <form action="/RemoveFromCar" method="post" class="">
                     <input type="text" hidden value="<%= item.shoppingCardId %>" name="removeCardId">
                     <input type="text" hidden value="<%= Number(item.bookAmount) %>" name="removeTotalBooks">
                     <button id="deleteBook" type="submit" class="text-primary border-0 bg-white p-0 m-0 ms-3 me-3 mb-3">Disminuir</button>
@@ -187,9 +192,11 @@
             <p class="fs-5">
               total producto: <strong class="fs-5"><%= totalBooks %></strong>
             </p>
-            <button class="btn btn-primary w-100 shadow p-1 mt-1 mb-1">
-              Proceder al pago
-            </button>
+            <form action="/CestaBuyBooks" method="post">
+              <button type="submit" class="btn btn-primary w-100 shadow p-1 mt-1 mb-1">
+                Proceder al pago
+              </button>
+            </form>
             <p class="mt-5">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi
               tenetur explicabo quaerat repudiandae animi sequi fuga inventore
@@ -202,6 +209,25 @@
     </div>
     <!-- CONTENIDO PARA LA CESTA -->
 
+    <!-- MODAL SUCCESS ( COMPRA COMPLETADA ) -->
+    <div class="popup center">
+      <div class="icon">
+        <i class="fa fa-check"></i>
+      </div>
+      <div class="title">Completado!!</div>
+      <div class="description">
+        Su compra ha sido realizada con exito, esperamos que disfrute de su
+        nueva adquisicion.
+      </div>
+      <div class="dismiss-btn">
+        <button id="dismiss-popup-btn">Cerrar</button>
+      </div>
+    </div>
+    <!-- MODAL SUCCESS ( COMPRA COMPLETADA ) -->
+
     <div class="mt-5 mb-5">.</div>
+
+    <script src="scripts/modalSuccess.js"></script>
+    <script src="scripts/shoppingModals.js"></script>
   </body>
 </html>
