--- a/views/EditBook.ejs
+++ b/views/EditBook.ejs
@@ -49,16 +49,19 @@
                   >
                 </li> -->
                 <% if( session.Role === "Admin") { %>
-                <li class="nav-item m-2">
-                  <a class="nav-link active text-white" href="/"
-                    >admin. users</a
-                  >
-                </li>
-                <li class="nav-item m-2">
-                  <a class="nav-link active text-white" href="/BooksRegistration"
-                    >Regis. Book</a
-                  >
-                </li>
+                  <li class="nav-item m-2">
+                    <a class="nav-link active text-white" href="/AdminSells">Ventas</a>
+                  </li>
+                  <li class="nav-item m-2">
+                    <a class="nav-link active text-white" href="/"
+                      >admin. users</a
+                    >
+                  </li>
+                  <li class="nav-item m-2">
+                    <a class="nav-link active text-white" href="/BooksRegistration"
+                      >Regis. Book</a
+                    >
+                  </li>
                 <% } %>
               </ul>
             </div>
