--- a/views/AdminSells.ejs
+++ b/views/AdminSells.ejs
@@ -11,6 +11,10 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
+    <script
+    src="https://kit.fontawesome.com/b55d7e5cd9.js"
+    crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="/css/adminSells.css" />
   </head>
   <body>
