Some important changes
Some important changes in client's view and admin's view

--- a/public/css/styles2.css
+++ b/public/css/styles2.css
@@ -32,3 +32,20 @@
 /* #grandFather{
   border-right: 1px solid rgb(174, 173, 173);
 } */
+#description {
+  position: relative;
+}
+
+#description::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 50px;
+  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), white);
+}
+
+.description-fade::after {
+  display: none; /* Eliminar el efecto de desvanecimiento cuando se agrega la clase */
+}
