some important changes

--- a/views/Home.ejs
+++ b/views/Home.ejs
@@ -116,34 +116,39 @@
         </nav>
         <!-- NAVBAR -->
 
+    <div class="position-relative mt-5 mb-5">
+      <hr class="border-top border-secondary mt-n2">
+      <span class="position-absolute top-0 start-50 translate-middle bg-white px-4 fs-4 " style="font-family: 'Source Serif Pro';">Inicio</span>
+    </div>
+
     
     <% if ( session.userId !== undefined ) {%>
       <section class="">
         <div class="container py-5 h-100">
-          <h1 class="mt-5 mx-auto text-center">Biblo Home</h1>
+          <!-- <h1 class="mt-5 mx-auto text-center">Biblo Home</h1> -->
           <div class="row d-flex justify-content-center align-items-center h-100">
             <div class="col col-md-9 col-lg-7 col-xl-5">
               <div class="card" style="border-radius: 15px;">
                 <div class="card-body p-4">
                   <div class="d-flex text-black">
-                    <div class="flex-shrink-0">
+                    <!-- <div class="flex-shrink-0">
                       <img src="https://i1.sndcdn.com/artworks-AYlBqEjA6RVnW5wy-GxeWdg-t500x500.jpg"
                         alt="Generic placeholder image" class="img-fluid"
                         style="width: 180px; border-radius: 10px;">
-                    </div>
+                    </div> -->
                     <div class="flex-grow-1 ms-3">
                       <h5 class="mb-1"><%= session.Name %> <%= session.LastName %></h5>
                       <p class="mb-2 pb-1" style="color: #2b2a2a;"><%= session.Role %></p>
                       <div class="d-flex justify-content-start rounded-3 p-2 mb-2"
                         style="background-color: #efefef;">
-                        <div>
+                        <!-- <div>
                           <p class="small text-muted mb-1">Books</p>
                           <p class="mb-0">3</p>
                         </div>
                         <div class="px-3">
                           <p class="small text-muted mb-1">Id</p>
                           <p class="mb-0"><%= session.userId %></p>
-                        </div>
+                        </div> -->
                       </div>
                       <div class="d-flex pt-1">
                         <button type="button" class="btn btn-outline-primary me-1 flex-grow-1">Edit profile</button>
