some important changes

--- a/views/BooksIndex.ejs
+++ b/views/BooksIndex.ejs
@@ -118,7 +118,7 @@
 
     <div class="position-relative mt-5 mb-5">
       <hr class="border-top border-secondary mt-n2">
-      <span class="position-absolute top-0 start-50 translate-middle bg-white px-4 fs-4 " style="font-family: 'Source Serif Pro';">Books</span>
+      <span class="position-absolute top-0 start-50 translate-middle bg-white px-4 fs-4 " style="font-family: 'Source Serif Pro';">Libros</span>
     </div>
 
     <!-- CONTENIDO -->
