--- a/views/Cesta.ejs
+++ b/views/Cesta.ejs
@@ -168,6 +168,7 @@
               </div>
               <div>
                 <p class="fw-bold fs-4">US$<%= item.bookPrice %></p>
+                <p class="fw-bold fs-4">US$<%= item.Discount %></p>
               </div>
             </div>
             <hr />
@@ -197,12 +198,6 @@
                 Proceder al pago
               </button>
             </form>
-            <p class="mt-5">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi
-              tenetur explicabo quaerat repudiandae animi sequi fuga inventore
-              nemo! Adipisci quis id sint illo amet? Rem dolore perferendis
-              impedit temporibus odio.
-            </p>
           </div>
         </div>
       </div>
