Some important changes done

--- a/views/BooksInformation.ejs
+++ b/views/BooksInformation.ejs
@@ -405,11 +405,11 @@
                       <h5><%= item.userFullName %></h5>
                       <p class="small"><%= item.commentDate %></p>
                     </div>
-                    <div class="w-100 d-flex flex-row justify-content-start">
-                      <p>
+                    <div class="m-1 w-75 d-flex flex-row justify-content-start flex-grap">
+                      <p style="word-wrap: break-word; max-width: 100%;">
                         <%= item.commentText %>
                       </p>
-                    </div>
+                    </div>                    
     
                     <div class="d-flex justify-content-between align-items-center">
                       <!-- SECCION Y FUNCIONAMIENTO DE LIKES -->
@@ -446,15 +446,15 @@
                 <div class="card w-100 border-disable">
                   <div class="card-body p-4">
                     <div class="d-flex flex-row justify-content-between align-items-start">
-                      <div>
+                      <div class="">
                         <h5><%= item.userFullName %></h5>
                         <p class="small"><%= item.commentDate %></p>
                       </div>
-                      <div class="w-100 d-flex flex-row justify-content-start">
-                        <p>
+                      <div class="m-1 w-75 d-flex flex-row justify-content-start flex-grap">
+                        <p style="word-wrap: break-word; max-width: 100%;">
                           <%= item.commentText %>
                         </p>
-                      </div>
+                      </div>  
       
                       <div class="d-flex justify-content-between align-items-center">
                         <!-- SECCION Y FUNCIONAMIENTO DE LIKES -->
