some important changes have been done

--- a/views/BooksInformation.ejs
+++ b/views/BooksInformation.ejs
@@ -290,20 +290,11 @@
       </div>
       
 
-      <div class="d-flex flex-row justify-content-between">
-          <!-- SINOPSIS -->
-        <div class="bg-white p-3 w-50 me-4">
-          <h4 class="fs-5 text-secondary">SINOPSIS</h4>
-          <p id="" class="">
-            <%= book.Description.replace(/\./g, ".\n").substr(0, 500) %>
-          </p>
-        </div>
-        <!-- SINOPSIS -->
-
+      <div class="d-flex flex-row justify-content-center align-items-center">
         <!-- FICHA TECNICA -->
-        <div class=" bg-white w-50 border-start border-disable border-1">
+        <div class=" bg-white w-50">
           <div class="ms-5">
-              <h4 class="text-secondary">Ficha tecnica</h4>
+              <!-- <h4 class="text-secondary text-center">Ficha tecnica</h4> -->
             <div class="d-flex flex-row justify-content-around align-items-center">
               <div>
                 <strong>Paginas</strong>
